    + If a HELO is not specified then attempt to use the content of
      /etc/mailname instread.
    + Expand on the definition of "claim" in the manpage. (Closes: #501142)
    + Trim anything that doesn't look like an e-mail address from $DEBEMAIL or
      $EMAIL before using it for un/claim or un/subscribe. (Closes: #501162)
  * checkbashisms:
    + Recognise brace expansions containing a leading or trailing empty value
      ("{,foo}", etc). Thanks Jonny Lamb. (Closes: #499971)
    + Recognise the use of "source" with quoted arguments. (Closes: #501171)
  * debdiff: Ensure exit status is always explicitly set (and set
    correctly). (Closes: #500256)
  * debian/rules: Create a link from the French pts-subscribe manpage
    as pts-unsubscribe, so long as the former exists (i.e. has been
    sufficiently translated).
  * licensecheck: Add support for fortran and Scilab files and for detecting
    the CeCILL and "SGI Free B" licenses. Thanks Sylvestre Ledru
    (Closes: #501447)
  * uscan: Allow --download-version to be more useful in situations where a
    current upstream version higher than that to be downloaded has been
    specified. Thanks James Westby. (Closes: #501932)

  [ James Vega ]
  * pts-subscribe: When called as pts-unsubscribe, send an unsubscribe request
    to the PTS.  (Closes: #500585)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Tue, 23 Sep 2008 19:07:48 +0100

devscripts (2.10.38) unstable; urgency=low

  [ Adam D. Barratt ]
  * When upgrading from devscripts 2.10.36, remove the incorrectly 
    created /etc/devscripts.con if it is present and add the affected 
    section to /etc/devscripts.conf instead.
  * tagpending: Re-add an accidentally removed blank line at the end
    of the generated comments.

  [ Patrick Schoenfeld ]
  * mk-build-deps:
    + Implement --install switch which installs a generated package and its
      depends afterwards.
    + Add an option --tool to specify which tool to use when installing the