@@ -8,6 +8,8 @@ devscripts (2.10.39) UNRELEASED; urgency=low
     + Expand on the definition of "claim" in the manpage. (Closes: #501142)
     + Trim anything that doesn't look like an e-mail address from $DEBEMAIL or
       $EMAIL before using it for un/claim or un/subscribe. (Closes: #501162)
+    + Update the documentation for "bts select" to make it clearer that
+      specifying a key multiple times gives "or" semantics. (Closes: #499434)
   * checkbashisms:
     + Recognise brace expansions containing a leading or trailing empty value
       ("{,foo}", etc). Thanks Jonny Lamb. (Closes: #499971)
